--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,9 +1,8 @@
 # Production Environment Variables
 # This file will be used when building for production
 
-# Backend API URL - Replace with your actual Vercel backend deployment URL
-# Example: https://your-backend-deployment.vercel.app/api
-VITE_API_BASE_URL=https://backend-ten-rho-11.vercel.app/api
+# Backend API URL - Use the deployment with API keys configured
+VITE_API_BASE_URL=https://backend-bn42qj3a9-jacobs-projects-cf4c7bdb.vercel.app/api
 
 # Optional: Add other production-specific variables here
 # VITE_ENVIRONMENT=production
