--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,5 +7,5 @@ python-dotenv==1.0.0
 fuzzywuzzy==0.18.0
 psycopg2-binary==2.9.9
 supabase==2.15.3
-aiohttp==3.9.1
+aiohttp>=3.11.18
 schedule==1.2.0
