--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,21 @@
     {
       "src": "backend/api/index.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "backend/api/cron.py",
+      "use": "@vercel/python"
     }
   ],
   "routes": [
+    {
+      "src": "/api/cron/(.*)",
+      "dest": "/backend/api/cron.py"
+    },
+    {
+      "src": "/cron/(.*)",
+      "dest": "/backend/api/cron.py"
+    },
     {
       "src": "/api/(.*)",
       "dest": "/backend/api/index.py"
@@ -13,6 +25,16 @@
     {
       "src": "/(.*)",
       "dest": "/frontend/dist/index.html"
+    }
+  ],
+  "crons": [
+    {
+      "path": "/api/cron/sync-all",
+      "schedule": "0 */30 * * *"
+    },
+    {
+      "path": "/api/cron/cleanup", 
+      "schedule": "0 2 * * *"
     }
   ]
 }
