--- a/.env.example2
+++ b/.env.example2
@@ -11,17 +11,16 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
 # Optional: Direct PostgreSQL connection for advanced operations
 DATABASE_URL=postgresql://postgres:your-password@db.your-project-id.supabase.co:5432/postgres
-
 # ==============================================
 # API KEYS FOR DATA SOURCES
 # ==============================================
 # SAM.gov API key (required for federal contract data)
 # Get from: https://sam.gov/content/api
-SAM_API_KEY=your_sam_api_key_here
+SAM_API_KEY=""
 
 # Firecrawl API key (optional, for web scraping)
 # Get from: https://firecrawl.dev
-FIRECRAWL_API_KEY=your_firecrawl_api_key_here
+FIRECRAWL_API_KEY=""
 
 # Perplexity AI API key (optional, for AI-powered discovery)
 # Get from: https://www.perplexity.ai/settings/api
